Add Arrow file analysis and integration with Apache Arrow
Introduce `ArrowTradeReader` for analyzing Arrow files, including schema and trade count extraction. Update dependencies to include Apache Arrow libraries, replace "nanoarrow" with "arrow" in DuckDB integration, and enhance workflow for Arrow file handling. Adjusted documentation and examples accordingly.